Number of max find history in setting dlg

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -1073,13 +1073,14 @@ BEGIN
 	PUSHBUTTON      "I'm going nowhere",IDCANCEL,181,66,70,14,BS_NOTIFY
 END
 
-IDD_VALUE_DLG DIALOGEX 0, 0, 74, 17
+IDD_VALUE_DLG DIALOGEX 0, 0, 83, 27
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
+FONT 9, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
-	LTEXT             "STATIC :",IDC_VALUE_STATIC,6,4,45,8
-	EDITTEXT        IDC_VALUE_EDIT,49,2,18,14,ES_NUMBER,WS_EX_DLGMODALFRAME
+	LTEXT             "STATIC :",IDC_VALUE_STATIC,9,3,33,9
+	EDITTEXT        IDC_VALUE_EDIT,49,2,23,11,ES_NUMBER
+//,WS_EX_DLGMODALFRAME
 END
 
 IDD_BUTTON_DLG DIALOGEX 0, 0, 12, 10
