--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -106,7 +106,6 @@ BEGIN
 	CONTROL         "",IDC_BORDERWIDTH_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,145,135,67,13
 	LTEXT           "0",IDC_BORDERWIDTHVAL_STATIC,213,135,12,8
 	CONTROL         "No edge",IDC_CHECK_NOEDGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,228,135,60,10
-	// CONTROL         "Display line number",IDC_CHECK_LINENUMBERMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,107,141,10
 	CONTROL         "Display bookmark",IDC_CHECK_BOOKMARKMARGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,120,150,10
 	CONTROL         "Enable current line highlighting",IDC_CHECK_CURRENTLINEHILITE,  "Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,133,129,10
 	CONTROL         "Enable smooth font",IDC_CHECK_SMOOTHFONT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,298,146,129,10
@@ -118,6 +117,7 @@ IDD_PREFERENCE_SETTING_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
+	GROUPBOX        "Document Switcher (Ctrl+TAB)",IDC_DOCUMENTSWITCHER_STATIC,37,4,155,39,BS_CENTER
 	CONTROL         "Enable",IDC_CHECK_ENABLEDOCSWITCHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,15,140,10
 	CONTROL         "Enable MRU behaviour",IDC_CHECK_STYLEMRU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,28,140,10
 	CONTROL         "Peek on tab",IDC_CHECK_ENABLEDOCPEEKER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,58,140,10
@@ -134,7 +134,6 @@ BEGIN
 	CONTROL         "Scroll to the last line after update",IDC_CHECK_UPDATEGOTOEOF,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,267,88,140,10
 	EDITTEXT        IDC_EDIT_SESSIONFILEEXT,381,135,34,14,ES_AUTOHSCROLL
 	EDITTEXT        IDC_EDIT_WORKSPACEFILEEXT,381,152,34,14,ES_AUTOHSCROLL
-	GROUPBOX        "Document Switcher (Ctrl+TAB)",IDC_DOCUMENTSWITCHER_STATIC,37,4,155,39,BS_CENTER
 	GROUPBOX        "Clickable Link Settings",IDC_CLICKABLELINK_STATIC,259,4,155,39,BS_CENTER
 	GROUPBOX        "Document Peeker",IDC_DOCUMENTPEEK_STATIC,37,47,155,39,BS_CENTER
 	GROUPBOX        "File Status Auto-Detection",IDC_FILEAUTODETECTION_STATIC,259,47,155,60,BS_CENTER
@@ -148,9 +147,9 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "New Document",IDC_NEWDOCUMENT_GR_STATIC,50,8,354,161,BS_CENTER
 	GROUPBOX        "Format (Line ending)",IDC_FORMAT_GB_STATIC,68,29,129,79,BS_CENTER
-	CONTROL         "\\r\\n : CR LF Windows",IDC_RADIO_F_WIN,"Button",BS_AUTORADIOBUTTON | WS_GROUP,75,48,75,10
-	CONTROL         "\\n : LF Unix/Linux",IDC_RADIO_F_UNIX,"Button",BS_AUTORADIOBUTTON,75,64,71,10
-	CONTROL         "\\r : CR Macintosh",IDC_RADIO_F_MAC,"Button",BS_AUTORADIOBUTTON,75,80,71,10
+	CONTROL         "Windows (CR LF)",IDC_RADIO_F_WIN,"Button",BS_AUTORADIOBUTTON | WS_GROUP,75,48,70,10
+	CONTROL         "Unix (LF)",IDC_RADIO_F_UNIX,"Button",BS_AUTORADIOBUTTON,75,64,70,10
+	CONTROL         "Macintosh (CR)",IDC_RADIO_F_MAC,"Button",BS_AUTORADIOBUTTON,75,80,70,10
 	GROUPBOX        "Encoding",IDC_ENCODING_STATIC,212,28,175,122,BS_CENTER
 	CONTROL         "ANSI",IDC_RADIO_ANSI,"Button",BS_AUTORADIOBUTTON | WS_GROUP,222,39,80,10
 	CONTROL         "UTF-8",IDC_RADIO_UTF8SANSBOM,"Button",BS_AUTORADIOBUTTON,222,53,128,10
@@ -182,19 +181,22 @@ END
 
 IDD_PREFERENCE_RECENTFILESHISTORY_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-	GROUPBOX        "Recent Files History",IDC_HISTORY_GB_STATIC,104,25,260,126,BS_CENTER
-	RTEXT           "Max. number of entries :",IDC_MAXNBFILE_STATIC,108,52,112,8
-	LTEXT           "0",IDC_MAXNBFILEVAL_STATIC,229,52,15,8,WS_TABSTOP
+	GROUPBOX        "Recent Files History",IDC_HISTORY_GB_STATIC,77,25,159,126,BS_CENTER
 	CONTROL         "Don't check at launch time",IDC_CHECK_DONTCHECKHISTORY,
-						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,39,140,10
-	GROUPBOX        "Display",IDC_DISPLAY_STATIC,121,65,225,73,BS_CENTER
-	CONTROL         "In Submenu",IDC_CHECK_INSUBMENU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,132,76,79,10
-	CONTROL         "Only File Name",IDC_RADIO_ONLYFILENAME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,133,92,170,10
-	CONTROL         "Full File Name Path",IDC_RADIO_FULLFILENAMEPATH,"Button",BS_AUTORADIOBUTTON,133,106,170,10
-	CONTROL         "Customize Maximum Length:",IDC_RADIO_CUSTOMIZELENTH,"Button",BS_AUTORADIOBUTTON,133,120,120,10
-	LTEXT           "0",IDC_CUSTOMIZELENGTHVAL_STATIC,255,120,18,8,WS_TABSTOP
+						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,40,99,10
+	RTEXT           "Max. number of entries:",IDC_MAXNBFILE_STATIC,88,55,80,8
+	LTEXT           "0",IDC_MAXNBFILEVAL_STATIC,194,55,13,8,WS_TABSTOP
+	CONTROL         "In Submenu",IDC_CHECK_INSUBMENU,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,76,56,10
+	CONTROL         "Only File Name",IDC_RADIO_ONLYFILENAME,"Button",BS_AUTORADIOBUTTON | WS_GROUP,89,92,69,10
+	CONTROL         "Full File Name Path",IDC_RADIO_FULLFILENAMEPATH,"Button",BS_AUTORADIOBUTTON,89,106,76,10
+	CONTROL         "Customize Maximum Length:",IDC_RADIO_CUSTOMIZELENTH,
+						"Button",BS_AUTORADIOBUTTON,89,120,105,10
+	LTEXT           "0",IDC_CUSTOMIZELENGTHVAL_STATIC,211,120,17,8,WS_TABSTOP
+	GROUPBOX        "Find History",IDC_STATIC,239,25,79,126,BS_CENTER
+	LTEXT         "Max. number of entries:",IDC_MAXNBFIND_STATIC,248,39,45,16
+	LTEXT           "0",IDC_MAXNBFINDVAL_STATIC,299,47,13,8,WS_TABSTOP
 END
 
 IDD_PREFERENCE_LANG_BOX DIALOGEX 0, 0, 455, 185
