Replace all in current file and automatically save

--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -54,45 +54,46 @@ BEGIN
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,50,57,13
     CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,50,44,11
     PUSHBUTTON      "Mark All",IDCMARKALL,304,12,53,12
-    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,159,94,47,9
     PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,25,53,14
     CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,62,43,13
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,69,11
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,76,48,11
-    CONTROL         "&Wrap around",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,63,53,11
-    GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,151,29
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,26,98,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,65,98,83,8
+    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,76,48,11
+    CONTROL         "&Wrap over",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,63,53,11
+    GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,147,29
+    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
+    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,64,98,83,8
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
     CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
     PUSHBUTTON      "",IDC_FINDPREV,344,12,13,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "Find Next",IDOK,306,12,51,12,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
-    PUSHBUTTON      "Total&/count",IDCCOUNTALL,158,75,42,11
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,258,67,44,26,BS_MULTILINE
-    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,258,54,44,12,BS_MULTILINE
-    PUSHBUTTON      "Replacin&g only",IDREPLACE1,307,28,50,12
-    PUSHBUTTON      "Re&place then find",IDREPLACE_FINDNEXT,295,41,63,12,BS_MULTILINE
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,303,54,55,12
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,303,67,55,26,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,30,32,12,BS_MULTILINE | WS_GROUP
+    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,147,76,47,9
+    PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,39,11
+    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,249,69,44,26,BS_MULTILINE
+    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,249,57,44,10,BS_MULTILINE
+    PUSHBUTTON      "Replacin&g only",IDREPLACE1,306,26,52,11
+    PUSHBUTTON      "Re&place then find",IDREPLACE_FINDNEXT,296,38,62,11,BS_MULTILINE
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,296,50,31,18,BS_MULTILINE
+    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,296,69,62,26,BS_MULTILINE
+    PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,12,32,10,BS_MULTILINE
+    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,22,32,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,326,35,32,19,BS_MULTILINE
     PUSHBUTTON      "Close",IDCANCEL,334,98,24,9
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,162,104,195,16
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,159,110,55,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,256,110,59,8
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,322,110,32,8
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,216,112,36,6
+    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,166,104,192,16
+    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,163,110,55,8
+    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,258,110,59,8
+    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,323,110,32,8
+    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,219,112,35,6
     PUSHBUTTON      "",IDC_FINDNEXT,305,12,38,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,305,43,53,12
-    PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,18,32,11,BS_MULTILINE
-    PUSHBUTTON      "Clear=>..",IDC_CLEAR_FINDALL_CURRENTFILE,224,54,34,12
-    PUSHBUTTON      "Clear&=>..",IDC_CLEAR_FINDALL_OPENEDFILES,224,67,34,12
-    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,226,35,22,11
-    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,257,35,18,11
+    PUSHBUTTON      "Clear=>",IDC_CLEAR_FINDALL_CURRENTFILE,219,57,30,10
+    PUSHBUTTON      "Clear&=>",IDC_CLEAR_FINDALL_OPENEDFILES,219,69,30,10
+    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,227,34,22,11
+    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,257,34,18,11
     RTEXT           "",IDSWAP_S,229,25,14,8,0,WS_EX_RIGHT
     RTEXT           "",IDCOPY_S,259,25,13,8,0,WS_EX_RIGHT
-    PUSHBUTTON      "Redo&,",IDC_REDO,1,44,24,10
-    PUSHBUTTON      "Undo&.",IDC_UNDO,32,44,24,10
+    PUSHBUTTON      "Redo&,",IDC_REDO,1,44,22,10
+    PUSHBUTTON      "Undo&.",IDC_UNDO,32,44,22,10
+    PUSHBUTTON      "=>Sa&ve",IDREPLACEALL_SAVE,327,50,31,18,BS_MULTILINE
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
