--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -37,15 +37,15 @@ IDD_PREFERENCE_BOX DIALOGEX 0, 0, 560, 220
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 CAPTION "Preferences"
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-	LISTBOX         IDC_LIST_DLGTITLE,10,10,80,185,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-	PUSHBUTTON      "Close",IDC_BUTTON_CLOSE,255,200,45,14
+	LISTBOX         IDC_LIST_DLGTITLE,7,7,85,181,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+	PUSHBUTTON      "Close",IDC_BUTTON_CLOSE,255,204,45,14
 END
 
 IDD_PREFERENCE_BAR_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Localization",IDC_LOCALIZATION_GB_STATIC,57,6,147,35,BS_CENTER
 	COMBOBOX        IDC_COMBO_LOCALIZATION,68,20,119,80,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
@@ -74,7 +74,7 @@ END
 
 IDD_PREFERENCE_MARGEIN_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Folder Margin Style",IDC_FMS_GB_STATIC,46,44,83,89,BS_CENTER
 	CONTROL         "Simple",IDC_RADIO_SIMPLE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,55,57,59,10
@@ -95,8 +95,8 @@ BEGIN
 	CONTROL         "",IDC_CARETBLINKRATE_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,156,25,67,13
 	LTEXT           "S",IDC_CARETBLINKRATE_S_STATIC,225,25,12,8
 	LTEXT           "F",IDC_CARETBLINKRATE_F_STATIC,144,25,12,8,0,WS_EX_RIGHT
-	GROUPBOX        "Multi-Editing Settings",IDC_MULTISELECTION_GB_STATIC,253,1,140,40,BS_CENTER
-	CONTROL         "Enable (Ctrl+Mouse click/selection)",IDC_CHECK_MULTISELECTION,
+	GROUPBOX        "Multi-Select Editing",IDC_MULTISELECTION_GB_STATIC,253,1,140,40,BS_CENTER
+	CONTROL         "Enable (Ctrl+Mouse each selection)",IDC_CHECK_MULTISELECTION,
 						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,261,18,130,10
 	GROUPBOX        "Line Wrap",IDC_LW_GB_STATIC,301,44,92,56,BS_CENTER
 	CONTROL         "Default",IDC_RADIO_LWDEF,"Button",BS_AUTORADIOBUTTON | WS_GROUP,311,57,59,10
@@ -115,7 +115,7 @@ END
 
 IDD_PREFERENCE_SETTING_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Document Switcher (Ctrl+TAB)",IDC_DOCUMENTSWITCHER_STATIC,37,4,155,39,BS_CENTER
 	CONTROL         "Enable",IDC_CHECK_ENABLEDOCSWITCHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,45,15,140,10
@@ -143,7 +143,7 @@ END
 
 IDD_PREFERENCE_NEWDOCSETTING_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "New Document",IDC_NEWDOCUMENT_GR_STATIC,50,8,354,161,BS_CENTER
 	GROUPBOX        "Format (Line ending)",IDC_FORMAT_GB_STATIC,68,29,129,79,BS_CENTER
@@ -165,7 +165,7 @@ END
 
 IDD_PREFERENCE_DEFAULTDIRECTORY_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Default Directory (Open/Save)",IDC_OPENSAVEDIR_GR_STATIC,110,29,232,101,BS_CENTER
 	CONTROL         "Follow current document",IDC_OPENSAVEDIR_FOLLOWCURRENT_RADIO,
@@ -201,7 +201,7 @@ END
 
 IDD_PREFERENCE_LANG_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Language Menu",IDC_CHECK_LANGMENU_GR_STATIC,34,0,220,172,BS_CENTER
 	CONTROL         "Make language menu compact",IDC_CHECK_LANGMENUCOMPACT,
@@ -225,7 +225,7 @@ END
 
 IDD_PREFERENCE_HILITE_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Smart Highlighting",IDC_SMARTHILITING_STATIC,147,21,155,81,BS_CENTER
 	CONTROL         "Enable",IDC_CHECK_ENABLSMARTHILITE,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,155,31,142,10
@@ -242,7 +242,7 @@ END
 
 IDD_PREFERENCE_PRINT_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	CONTROL         "WYSIWYG",IDC_RADIO_WYSIWYG,"Button",BS_AUTORADIOBUTTON,12,30,123,10
 	CONTROL         "Invert",IDC_RADIO_INVERT,"Button",BS_AUTORADIOBUTTON,12,45,90,10
@@ -291,7 +291,7 @@ END
  
 IDD_PREFERENCE_BACKUP_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Session snapshot and periodic backup",IDC_BACKUPDIR_RESTORESESSION_GRP_STATIC,79,1,289,75,BS_CENTER
 	CONTROL         "Remember current session for next launch",IDC_CHECK_REMEMBERSESSION,
@@ -316,7 +316,7 @@ END
 
 IDD_PREFERENCE_AUTOCOMPLETION_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	CONTROL         "Auto-indent",IDC_CHECK_MAINTAININDENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,15,100,10
 
@@ -356,7 +356,7 @@ END
 
 IDD_PREFERENCE_MULTIINSTANCE_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Multi-instance settings",IDC_MULTIINST_GB_STATIC,89,44,268,110,BS_CENTER
 	CONTROL         "Open session in a new instance of Notepad++",IDC_SESSIONININST_RADIO,
@@ -369,7 +369,7 @@ END
 
 IDD_PREFERENCE_DELIMITERSETTINGS_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Word character list",IDC_WORDCHARLIST_GB_STATIC,89,2,268,93,BS_CENTER
 	CONTROL         "Use default Word character list as it is",IDC_RADIO_WORDCHAR_DEFAULT,"Button",BS_AUTORADIOBUTTON | WS_GROUP,100,18,250,10
@@ -392,7 +392,7 @@ END
 
 IDD_PREFERENCE_SETTINGSONCLOUD_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Settings on cloud",IDC_SETTINGSONCLOUD_GB_STATIC,89,44,268,102,BS_CENTER
 	CONTROL         "No Cloud",IDC_NOCLOUD_RADIO,"Button",BS_AUTORADIOBUTTON,125,57,180,10
@@ -404,7 +404,7 @@ END
 
 IDD_PREFERENCE_SEARCHENGINE_BOX DIALOGEX 0, 0, 455, 185
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
 	GROUPBOX        "Search Engine (for command ""Search on Internet"")",IDC_SEARCHENGINES_GB_STATIC,74,24,297,145,BS_CENTER
 	CONTROL         "DuckDuckGo",IDC_SEARCHENGINE_DUCKDUCKGO_RADIO,"Button",BS_AUTORADIOBUTTON,105,37,180,10
