--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -384,14 +384,15 @@ BEGIN
 
 	POPUP "Search"
 	BEGIN
-		MENUITEM "&Find/Replace",                 IDM_SEARCH_REPLACE
+		MENUITEM "Find/Replace",                 IDM_SEARCH_REPLACE
 		MENUITEM "Find/Replace in Files",            IDM_SEARCH_FINDINFILES
 		MENUITEM "Find &Next",                  IDM_SEARCH_FINDNEXT
 		MENUITEM "Find &Previous",              IDM_SEARCH_FINDPREV
-		MENUITEM "Select and Find Next",        IDM_SEARCH_SETANDFINDNEXT
-		MENUITEM "Select and Find Previous",    IDM_SEARCH_SETANDFINDPREV
+		MENUITEM "Replacin&g this Only ",              IDM_SEARCH_REPLACING1
 		MENUITEM "Find (Volatile) Next",        IDM_SEARCH_VOLATILE_FINDNEXT
 		MENUITEM "Find (Volatile) Previous",    IDM_SEARCH_VOLATILE_FINDPREV
+		MENUITEM "Select and Find Next",        IDM_SEARCH_SETANDFINDNEXT
+		MENUITEM "Select and Find Previous",    IDM_SEARCH_SETANDFINDPREV
 		MENUITEM "&Incremental Search",         IDM_SEARCH_FINDINCREMENT
 		MENUITEM "Next Search Result",          IDM_SEARCH_GOTONEXTFOUND
 		MENUITEM "Previous Search Result",      IDM_SEARCH_GOTOPREVFOUND
