--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -53,8 +53,8 @@ BEGIN
     CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
     CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,50,57,13
     CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,50,44,11
-    PUSHBUTTON      "Mark All",IDCMARKALL,304,12,53,12
-    PUSHBUTTON      "Clear all marks",IDC_CLEAR_ALL,304,25,53,14
+    PUSHBUTTON      "Mark All",IDCMARKALL,309,12,47,12
+    PUSHBUTTON      "Clear All",IDC_CLEAR_ALL,309,25,47,12
     CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,62,43,13
     CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,69,11
     CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,76,48,11
@@ -64,36 +64,36 @@ BEGIN
     CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,64,98,83,8
     CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
     CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
-    PUSHBUTTON      "",IDC_FINDPREV,344,12,13,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Find Next",IDOK,306,12,51,12,WS_GROUP
     CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
+    PUSHBUTTON      "Find Next",IDOK,307,12,50,12,WS_GROUP
+    PUSHBUTTON      "",IDC_FINDPREV,343,12,15,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "",IDC_FINDNEXT,307,12,36,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "Replacin&g only",IDREPLACE1,307,25,51,12
+    PUSHBUTTON      "Re&place then find",IDREPLACE_FINDNEXT,297,37,61,12,BS_MULTILINE
     CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,147,76,47,9
-    PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,39,11
+    PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,40,11
     PUSHBUTTON      "Clear=>",IDC_CLEAR_FINDALL_CURRENTFILE,219,59,30,10
     PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,249,59,44,10,BS_MULTILINE
     PUSHBUTTON      "Clear&=>",IDC_CLEAR_FINDALL_OPENEDFILES,219,69,30,10
     PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,249,69,44,26,BS_MULTILINE
-    PUSHBUTTON      "Replacin&g only",IDREPLACE1,306,25,52,11
-    PUSHBUTTON      "Re&place then find",IDREPLACE_FINDNEXT,296,37,62,11,BS_MULTILINE
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,296,50,32,19,BS_MULTILINE
-    PUSHBUTTON      "=>Sa&ve",IDREPLACEALL_SAVE,328,50,30,19,BS_MULTILINE
+    PUSHBUTTON      "Replace &All",IDREPLACEALL,296,50,33,19,BS_MULTILINE
+    PUSHBUTTON      "=>  Sa&ve",IDREPLACEALL_SAVE,329,50,29,19,BS_MULTILINE
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,296,69,62,26,BS_MULTILINE
     PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,12,32,10,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,22,32,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,326,35,32,19,BS_MULTILINE
+    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,23,32,12,BS_MULTILINE | WS_GROUP
+    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,326,36,32,19,BS_MULTILINE
     PUSHBUTTON      "Close",IDCANCEL,334,98,24,9
     GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,166,104,192,16
     CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,163,110,55,8
     CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,258,110,59,8
     CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,323,110,32,8
     CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,219,112,35,6
-    PUSHBUTTON      "",IDC_FINDNEXT,305,12,38,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,227,34,22,11
     PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,257,34,18,11
     RTEXT           "",IDSWAP_S,229,25,14,8,0,WS_EX_RIGHT
     RTEXT           "",IDCOPY_S,259,25,13,8,0,WS_EX_RIGHT
-    PUSHBUTTON      "Redo&,",IDC_REDO,1,44,22,10
-    PUSHBUTTON      "Undo&.",IDC_UNDO,32,44,22,10
+    PUSHBUTTON      "Redo&,",IDC_REDO,1,44,23,10
+    PUSHBUTTON      "Undo&.",IDC_UNDO,31,44,23,10
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
