finder view wrap, file title in ...

--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -321,18 +321,16 @@ BEGIN
 	CONTROL         "Auto-indent",IDC_CHECK_MAINTAININDENT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,15,100,10
 
 	GROUPBOX        "Auto-Completion",IDD_AUTOC_GRPSTATIC,131,4,289,84,BS_CENTER
-	CONTROL         "Enable auto-completion on each input",IDD_AUTOC_ENABLECHECK,
-						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,15,150,10
-	CONTROL         "Language completion",IDD_AUTOC_FUNCRADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,163,27,145,10
-	CONTROL         "Word completion",IDD_AUTOC_WORDRADIO,"Button",BS_AUTORADIOBUTTON,163,41,145,10
-	CONTROL         "Language and word completion",IDD_AUTOC_BOTHRADIO,
-						"Button",BS_AUTORADIOBUTTON,163,55,145,10
-	RTEXT           "From",IDD_AUTOC_STATIC_FROM,293,15,47,8
-	CTEXT           "1",IDD_AUTOC_STATIC_N,344,15,8,8,WS_TABSTOP
-	LTEXT           "th character",IDD_AUTOC_STATIC_CHAR,358,15,57,8
-	LTEXT           "Valid value : 1 - 9",IDD_AUTOC_STATIC_NOTE,323,25,93,8
-	CONTROL         "Ignore numbers",IDD_AUTOC_IGNORENUMBERS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,323,51,80,10
-	CONTROL         "Ignore letter-case",IDD_AUTOC_IGNORECASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,323,63,85,10
+	CONTROL         "Auto-completion is enabled for:",IDD_AUTOC_ENABLECHECK,
+						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,15,145,10
+	CONTROL         "Language keywords and functions",IDD_AUTOC_FUNCRADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP,155,27,145,10
+	CONTROL         "Words of document being edited",IDD_AUTOC_WORDRADIO,"Button",BS_AUTORADIOBUTTON,155,41,145,10
+	CONTROL         "Both of above",IDD_AUTOC_BOTHRADIO,
+						"Button",BS_AUTORADIOBUTTON,155,55,145,10
+	LTEXT           "Triggered on: (1st - 5th char)",IDD_AUTOC_STATIC_FROM,310,15,99,9
+	CTEXT           "2",IDD_AUTOC_STATIC_N,335,27,8,8,WS_TABSTOP
+	CONTROL         "Ignore numbers",IDD_AUTOC_IGNORENUMBERS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,317,51,80,10
+	CONTROL         "Ignore letter-case",IDD_AUTOC_IGNORECASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,317,63,85,10
 	CONTROL         "Function parameters hint on input",IDD_FUNC_CHECK,
 						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,72,160,10
 	GROUPBOX        "Auto-Insert",IDD_AUTOCINSERT_GRPSTATIC,131,94,289,84,BS_CENTER
