--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -68,8 +68,8 @@ BEGIN
     PUSHBUTTON      "Find Next",IDOK,307,12,50,12,WS_GROUP
     PUSHBUTTON      "",IDC_FINDPREV,343,12,15,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "",IDC_FINDNEXT,307,12,36,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Replacin&g only",IDREPLACE1,307,25,51,12
-    PUSHBUTTON      "Re&place then find",IDREPLACE_FINDNEXT,297,37,61,12,BS_MULTILINE
+    PUSHBUTTON      "Re&place only",IDREPLACE1,307,26,51,12
+    PUSHBUTTON      "Replace t&hen find",IDREPLACE_FINDNEXT,297,38,61,12,BS_MULTILINE
     CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,147,76,47,9
     PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,40,11
     PUSHBUTTON      "Clear=>",IDC_CLEAR_FINDALL_CURRENTFILE,219,59,30,10
