--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -515,9 +515,9 @@ BEGIN
 		MENUITEM "Focus on Another View",         IDM_VIEW_SWITCHTO_OTHER_VIEW
 		MENUITEM "Hide Lines",                  IDM_VIEW_HIDELINES
 		MENUITEM SEPARATOR
-		MENUITEM "Fold/Unfold All",                    IDM_VIEW_TOGGLE_FOLDALL
 		MENUITEM "Fold/Unfold This Level",      IDM_VIEW_TOGGLE_FOLDCURRENT
-		MENUITEM "Fold/Unfold It Recursively",    IDM_VIEW_TOGGLE_FOLDCURREC
+		MENUITEM "Fold/Unfold This Recursively",    IDM_VIEW_TOGGLE_FOLDCURREC
+		MENUITEM "Fold/Unfold All",                    IDM_VIEW_TOGGLE_FOLDALL
 		POPUP "Collapse Level"
 		BEGIN
 				MENUITEM "1",   IDM_VIEW_FOLD_1
