--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -68,15 +68,15 @@ BEGIN
     PUSHBUTTON      "Find Next",IDOK,307,12,50,12,WS_GROUP
     PUSHBUTTON      "",IDC_FINDPREV,343,12,15,12,BS_MULTILINE | WS_GROUP
     PUSHBUTTON      "",IDC_FINDNEXT,307,12,36,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Re&place only",IDREPLACE1,307,26,51,12
+    PUSHBUTTON      "Replace &only",IDREPLACE1,307,26,51,12
     PUSHBUTTON      "Replace t&hen find",IDREPLACE_FINDNEXT,297,38,61,12,BS_MULTILINE
     CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,147,76,47,9
     PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,40,11
     PUSHBUTTON      "Clear=>",IDC_CLEAR_FINDALL_CURRENTFILE,219,59,30,10
-    PUSHBUTTON      "F&ind All",IDC_FINDALL_CURRENTFILE,249,59,44,10,BS_MULTILINE
+    PUSHBUTTON      "Find &All",IDC_FINDALL_CURRENTFILE,249,59,44,10,BS_MULTILINE
     PUSHBUTTON      "Clear&=>",IDC_CLEAR_FINDALL_OPENEDFILES,219,69,30,10
-    PUSHBUTTON      "Find All in All &Opened Documents",IDC_FINDALL_OPENEDFILES,249,69,44,26,BS_MULTILINE
-    PUSHBUTTON      "Replace &All",IDREPLACEALL,296,50,33,19,BS_MULTILINE
+    PUSHBUTTON      "F&ind All in All Opened Documents",IDC_FINDALL_OPENEDFILES,249,69,44,26,BS_MULTILINE
+    PUSHBUTTON      "Re&place All",IDREPLACEALL,296,50,33,19,BS_MULTILINE
     PUSHBUTTON      "=>  Sa&ve",IDREPLACEALL_SAVE,329,50,29,19,BS_MULTILINE
     PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,296,69,62,26,BS_MULTILINE
     PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,12,32,10,BS_MULTILINE
