--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -330,7 +330,7 @@ BEGIN
 	LTEXT           "Triggered on: (1st - 5th char)",IDD_AUTOC_STATIC_FROM,310,15,99,9
 	CTEXT           "2",IDD_AUTOC_STATIC_N,335,27,8,8,WS_TABSTOP
 	CONTROL         "Ignore numbers",IDD_AUTOC_IGNORENUMBERS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,317,51,80,10
-	CONTROL         "Ignore letter-case",IDD_AUTOC_IGNORECASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,317,63,85,10
+	// CONTROL         "Ignore letter-case",IDD_AUTOC_IGNORECASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,317,63,85,10
 	CONTROL         "Function parameters hint on input",IDD_FUNC_CHECK,
 						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,72,160,10
 	GROUPBOX        "Auto-Insert",IDD_AUTOCINSERT_GRPSTATIC,131,94,289,84,BS_CENTER
